--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -230,16 +230,16 @@
     "    plt.plot(x1, x2)\n",
     "    plot_amostras(dataset, plt)\n",
     "    plt.show()  \n",
-    "    for amostra in dataset:\n",
+    "    for x in dataset:\n",
     "        \n",
-    "        g = w[0]*amostra[1] + w[1]*amostra[2]  + w0\n",
+    "        g = w[0]*x[1] + w[1]*x[2]  + w0\n",
     "        \n",
-    "        if(g>0 and amostra[0]==0):\n",
-    "            w = w - amostra[1:]\n",
+    "        if(g>0 and x[0]==0):\n",
+    "            w = w - x[1:]\n",
     "            w0 = w0 - 1\n",
     "            \n",
-    "        if(g<0 and amostra[0]==1):\n",
-    "            w = w + amostra[1:]\n",
+    "        if(g<0 and x[0]==1):\n",
+    "            w = w + x[1:]\n",
     "            w0 = w0 + 1\n",
     "            \n"
    ]
