--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -249,7 +249,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = torch.tensor(1., requires_grad=True)\n",
+    "w = torch.tensor(2., requires_grad=True)\n",
+    "b = torch.tensor(3., requires_grad=True)\n",
+    "\n",
+    "# Forward pass\n",
+    "y = w * x + b    # y = 2 * x + 3\n",
+    "\n",
+    "# Backward pass\n",
+    "y.backward()\n",
+    "\n",
+    "# Calcula as derivadas\n",
+    "print(x.grad)    # x.grad = 2 \n",
+    "print(w.grad)    # w.grad = 1 \n",
+    "print(b.grad)    # b.grad = 1 "
+   ]
   }
  ],
  "metadata": {
